[package]
name = "hololive"
version = "0.1.2"
authors = ["rainy-me <github@rainy.me>"]
edition = "2018"
exclude = [
    "src/test.html",
]
description = "hololive schedule info"
license = "MIT"
repository = "https://github.com/rainy-me/hololive"
keywords = ["hololive", "vtuber", "cli"]

[dependencies]
regex = "1"
clap = "2"
colored = "2.0.0"
pad = "0.1"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"